# fhir_client

./: Cargo.toml  README.md
examples/yew_fhir/: Cargo.toml  index.html
examples/yew_fhir/style/: myscss.scss
src/: lib.rs
src/r4/: address.rs  assigner.rs  coding.rs  contact.rs  extension.rs  human_name.rs  identifier.rs  issuer.rs  managing_organization.rs  meta.rs  mod.rs  observation.rs  patient.rs  period.rs  practitioner.rs  practitioner_role.rs  qualification.rs  reference.rs  reference_range.rs  telecom.rs  text.rs
