[package]
name = "fhir_client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# reqwest = { version = "0.11", features = ["json"], optional = true }
# tokio = { version = "1", features = ["full"], optional = true }

reqwasm = {version = "0.5.0", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"

# [features]
# reqwest = ["dep:reqwest"]
# reqwasm = ["dep:reqwasm"]