[package]
name = "fhir_client"
authors = ["Flint6872 <Flint6872@gmail.com>"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.11.17", features = ["json"], optional = true }
tokio = { version = "1.25.0", features = ["full"], optional = true }

reqwasm = {version = "0.5.0", optional = true }

wasm-bindgen-futures = {version = "0.4.1", optional = true}
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"], optional = true  }

serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_derive = "^1.0.59"

[features]
reqwest = ["dep:reqwest", "dep:tokio"]
reqwasm = ["dep:reqwasm"]
reqwest-wasm = ["dep:reqwest","dep:wasm-bindgen-futures", "dep:wasm-bindgen"]